unpackaged/main/default/objects/Test_Custom_Object__c/Test_Custom_Object__c.object-meta.xml
<CustomObject>
    <description>A test Custom Object</description>
    <label>Test Custom Object</label>
    <nameField>
        <label>Test Custom Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Custom Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>