unpackaged/main/default/objects/Test_Custom_Object__c/fields/Best_Field__c.field-meta.xml
<CustomField>
    <fullName>Best_Field__c</fullName>
    <description>Just the best field there could be</description>
    <label>Best Field</label>
    <length>25</length>
    <type>Text</type>
</CustomField>