unpackaged/main/default/objects/Test_Custom_Object__c/fields/Notes_Box__c.field-meta.xml
<CustomField>
    <fullName>Notes_Box__c</fullName>
    <description>A box for any additional notes</description>
    <label>Notes Box</label>
    <length>150</length>
    <type>Text</type>
</CustomField>